P3/ejudge_contests/06/var/archive/xmlreports/0/0/0/000010
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="10" judge-id="11" status="CE" scoring="ACM" run-tests="0" contest-id="306" compile-error="yes" >
  <uuid>435314ec-4775-4c29-abb5-ac9c18e83545</uuid>
  <compiler_output>000010.cpp:41:2: error: expected unqualified-id
}/
 ^
1 error generated.
</compiler_output>
</testing-report>
